--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="./src/assets/icon-pag.png">
-    <title>Weather App</title>
-
+    <title>Weather App| Felix </title>
+    <script src="https://kit.fontawesome.com/a94232c206.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
-    <script src="https://kit.fontawesome.com/c0d4b7bca0.js" crossorigin="anonymous"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
