--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="img/png" href='/favicon.png' />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App| Felix </title>
     <script src="https://kit.fontawesome.com/a94232c206.js" crossorigin="anonymous"></script>
